asm_tests/other_testfiles/invalid_files/error11.s
.name "MORO"
.comment "MORJESTA!"

hihii:
lldi r1, %42, :hihii
